--- a/HobbyWebsite/Views/Shared/_Layout.cshtml
+++ b/HobbyWebsite/Views/Shared/_Layout.cshtml
@@ -7,10 +7,23 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HobbyWebsite.styles.css" asp-append-version="true" />
+    <link rel="icon" href="@Url.Content("~/favicon.ico")" />
 </head>
 <body>
 
+    <nav>
+        <a href="@Url.Action("Index", "Home")">Home</a>
+        <a href="@Url.Action("Calculator", "Home")">Calculator</a>
+
+    </nav>
+
+    <h1>Emma's Hobby Website</h1>
+
     @RenderBody()
+
+    <footer>
+        &copy;Emma Bastian 2024
+    </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
