--- a/HobbyWebsite/Views/Shared/_Layout.cshtml
+++ b/HobbyWebsite/Views/Shared/_Layout.cshtml
@@ -11,13 +11,15 @@
 </head>
 <body>
 
-    <nav>
-        <!--<a href="@Url.Action("Index", "Home")">Home</a>
-        <a href="@Url.Action("Calculator", "Home")">Calculator</a>-->
-        <a asp-controller="Home" asp-action="Index">Home</a>
-        <a asp-controller="Home" asp-action="Calculator">Calculator</a>
-                
-    </nav>
+    <header>
+
+        <nav>
+           
+            <a asp-controller="Home" asp-action="Index">Home</a>
+            <a asp-controller="Home" asp-action="Calculator">Calculator</a>
+         
+        </nav>
+    </header>
 
     <h1>Emma's Hobby Website</h1>
 
