--- a/HobbyWebsite/Views/Home/Calculator.cshtml
+++ b/HobbyWebsite/Views/Home/Calculator.cshtml
@@ -8,6 +8,7 @@
 <h2>Calculator</h2>
 
 <p>Enter in the number of hours you would like Emma to tutor you in art to see a total.</p>
+<br />
     <form>
         <label for="hours">Hours Needed: </label>
         <input type="number" id="hours" min="0"/>
@@ -16,7 +17,7 @@
         <button type="button" id="btnSubmit">Calculate</button>
     </form>
     <br />
-    <div>
+    <div class="output">
         <label>Total Cost:</label>
         <output id="output"></output>
     </div>
