--- a/HobbyWebsite/Views/Home/Index.cshtml
+++ b/HobbyWebsite/Views/Home/Index.cshtml
@@ -1,15 +1,21 @@
 ﻿<main>
     <h2>Home</h2>
 
-    <p>I have been drawing for about as long as I can remember. It is something I usually enjoy, unless I have to spend an hour redrawing the same line to get it right. It is also something I wish I had more time for. Below are a few examples of my work. </p>
-    
+    <p>I have been drawing for about as long as I can remember. It is something I usually enjoy, unless I have to spend an hour redrawing the same line to get it right. 
+        It is also something I wish I had more time for. Below are a few examples of my work. 
+    </p>
+    <br />
     <img src="~/img/bobross.jpeg" width="400" alt="Watercolor painting of the sunsetting over mountains and a lake." />
     
-    <p>I painted this as an FHE activity, and it was fun since I hadn't painted in a while. '</p>
-
+    <p>I painted this as an FHE activity, and it was fun since I hadn't painted in a while. 
+        It was interesting to recreate a Bob Ross painting with watercolors, since that is not at all the kind of paint that he uses. 
+    </p>
+    <br />
     <img src="~/img/jatp.jpeg" width="400" alt="4 members of the band Julie and the Phantoms."/>
 
-    <p>I did this picture a few years ago as part of a fan magazine for a TV show I was obsessed with at the time.</p>
+    <p>I did this picture a few years ago as part of a fan magazine for a TV show I was obsessed with at the time. 
+        The piece was done digitally in procreate, and took at least 15 hours to complete. 
+    </p>
 
 </main>
 
